syntax = "proto3";

option csharp_namespace = "MageekMaui";

package collection;

service Collectionner 
{
	rpc CollecMove (Request_CollecMove) returns (Reply_CollecMove);
	rpc Collected (Request_Collected) returns (Reply_Quantity);
}
service DeckBuilder 
{
	rpc GetDecks (Request_Default) returns (Reply_DeckList);
	rpc GetDeckInfo (Request_DeckId) returns (Reply_Deck);
	rpc GetDeckContent (Request_DeckId) returns (Reply_DeckContent);
	rpc CreateDeck (Request_CreateDeck) returns (Reply_Default);
	rpc UpdateDeck (Request_UpdateDeck) returns (Reply_Default);
	rpc DeleteDeck (Request_DeckId) returns (Reply_Default);
}
service Tagger 
{
	rpc GetExistingTags (Request_Default) returns (Reply_TagList);
	rpc GetCardTags (Request_archetypeId) returns (Reply_TagList);
	rpc TagCard (Request_CardTag) returns (Reply_Default);
	rpc UnTagCard (Request_CardTag) returns (Reply_Default);
	rpc HasTag (Request_CardTag) returns (Reply_HasTag);
}

message Request_Default {
}

message Reply_Default {
	bool success = 1;
}

message Request_CollecMove {
	string cardUuid = 1;
	int32  quantityModification = 2;
}

message Reply_CollecMove {
	bool success = 1;
	int32  quantityBeforeMove = 2;
	int32  quantityAfterMove = 3;
}

message Request_Collected {
	string cardUuid = 1;
	bool onlyThisVariant = 2;
}

message Reply_Quantity {
	bool success = 1;
	int32  quantity = 2;
}

message Request_DeckId {
	string deckId = 1; 
}

message Reply_DeckList {
	repeated Reply_Deck decks = 1;
}

message Reply_Deck {
	string DeckId = 1;
	string Title = 2;
	string Description = 3;
	string DeckColors = 4;
	int32 CardCount = 5;
}

message Reply_DeckContent {
	repeated Reply_DeckCard content = 1;
}

message Request_CreateDeck {
	string title = 1;
	string description = 2;
	repeated Reply_DeckCard content = 3;
}

message Request_UpdateDeck {
	string deckId = 1; 
	string title = 2;
	string description = 3;
	repeated Reply_DeckCard content = 4;
}

message Reply_DeckCard {
	string deckId = 1; 
	string CardUuid = 2; 
	int32  Quantity = 3; 
	int32  RelationType = 4; 
}

message Reply_TagList {
	repeated string tags = 1;
}

message Request_archetypeId {
	string archetypeId = 1;
}

message Request_CardTag {
	string archetypeId = 1;
	string tag = 2;
}
	
message Reply_HasTag {
	bool hasTag = 1;
}
