syntax = "proto3";

option csharp_namespace = "MageekProtocol";

package MageekProtocolPackage;

service MageekProtocolService 
{

	rpc NormalSearch					(Request_NormalSearch)	  returns (Reply_SearchedCard);
	rpc AdvancedSearch					(Request_AdvancedSearch)  returns (Reply_SearchedCard);

	rpc GetCardUuidsForGivenCardName	(Request_CardName)		  returns (Reply_ListCardUuid);
	rpc GetCardNameForGivenCardUuid		(Request_CardUuid)		  returns (Reply_CardName);
	rpc GetCardUuidsForGivenCardUuid	(Request_CardUuid)		  returns (Reply_ListCardUuid);
	
	rpc FindCard_Data					(Request_CardUuid)		  returns (Reply_CardData);
	rpc GetTranslatedData				(Request_CardTranslation) returns (Reply_CardForeignData);
	rpc GetCardBack						(Request_CardUuid) 		  returns (Reply_CardUuid);
	rpc GetLegalities					(Request_) 								returns (Reply_);
	rpc GetRulings						(Request_) 								returns (Reply_);
	rpc FindCard_Related				(Request_) 								returns (Reply_);
	rpc FindRelateds					(Request_) 								returns (Reply_);
	rpc RetrieveImage					(Request_) 								returns (Reply_);
	rpc EstimateCardPrice				(Request_) 								returns (Reply_);
	
	rpc LoadSets						(Request_) 								returns (Reply_);
	rpc GetSet							(Request_) 								returns (Reply_);
	rpc GetCardsFromSet					(Request_) 								returns (Reply_);
	rpc GetMtgSetCompletion				(Request_) 								returns (Reply_);

	rpc SetFav							(Request_) 								returns (Reply_);
	rpc CollecMove						(Request_CollecMove)					returns (Reply_CollecMove);
	rpc Collected						(Request_Collected)						returns (Reply_Quantity);
	rpc Collected_AllVariants			(Request_) 								returns (Reply_);
	rpc GetTotal_Collected				(Request_) 								returns (Reply_);
	rpc GetTotal_CollectedDiff			(Request_) 								returns (Reply_);
	rpc GetTotal_CollectedArchetype		(Request_) 								returns (Reply_);
	rpc GetTotal_ExistingArchetypes		(Request_) 								returns (Reply_);
	rpc AutoEstimatePrices				(Request_) 								returns (Reply_);

	rpc GetDecks						(Request_Default)						returns (Reply_DeckList);
	rpc GetDeck							(Request_DeckId)						returns (Reply_Deck);
	rpc GetDeckContent					(Request_DeckId)						returns (Reply_DeckContent);
	rpc CreateDeck_Empty				(Request_) 								returns (Reply_);
	rpc CreateDeck						(Request_) 								returns (Reply_);
	rpc RenameDeck						(Request_) 								returns (Reply_);
	rpc DuplicateDeck					(Request_) 								returns (Reply_);
	rpc SaveDeck						(Request_) 								returns (Reply_);
	rpc UpdateDeck						(Request_UpdateDeck)					returns (Reply_Default);
	rpc DeleteDeck						(Request_DeckId)						returns (Reply_Default);
	rpc GetPrecos						(Request_) 								returns (Reply_);
	rpc EstimateDeckPrice				(Request_) 								returns (Reply_);
	
	rpc DeckToTxt						(Request_) 								returns (Reply_);
	rpc ParseCardList					(Request_) 								returns (Reply_);

	rpc GetTags							(Request_Default)						returns (Reply_TagList);
	rpc HasTag							(Request_CardTag)						returns (Reply_HasTag);
	rpc TagCard							(Request_CardTag)						returns (Reply_Default);
	rpc UnTagCard						(Request_CardTag)						returns (Reply_Default);
	rpc GetCardTags						(Request_archetypeId)					returns (Reply_TagList);

}

message Request_Default {}
message Reply_Default {bool success = 1;}

message Request_CollecMove {
	string cardUuid = 1;
	int32  quantityModification = 2;
}

message Reply_CollecMove {
	bool success = 1;
	int32  quantityBeforeMove = 2;
	int32  quantityAfterMove = 3;
}

message Request_Collected {
	string cardUuid = 1;
	bool onlyThisVariant = 2;
}

message Reply_Quantity {
	bool success = 1;
	int32  quantity = 2;
}

message Request_DeckId {
	string deckId = 1; 
}

message Reply_DeckList {
	repeated Reply_Deck decks = 1;
}

message Reply_Deck {
	string DeckId = 1;
	string Title = 2;
	string Description = 3;
	string DeckColors = 4;
	int32 CardCount = 5;
}

message Reply_DeckContent {
	repeated Reply_DeckCard content = 1;
}

message Request_CreateDeck {
	string title = 1;
	string description = 2;
	repeated Reply_DeckCard content = 3;
}

message Request_UpdateDeck {
	string deckId = 1; 
	string title = 2;
	string description = 3;
	repeated Reply_DeckCard content = 4;
}

message Reply_DeckCard {
	string deckId = 1; 
	string CardUuid = 2; 
	int32  Quantity = 3; 
	int32  RelationType = 4; 
}

message Reply_TagList {
	repeated string tags = 1;
}

message Request_archetypeId {
	string archetypeId = 1;
}

message Request_CardTag {
	string archetypeId = 1;
	string tag = 2;
}
	
message Reply_HasTag {
	bool hasTag = 1;
}
